# fs-sav

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/fs_sav/: __init__.py
src/: cli.rs  error.rs  lib.rs  main.rs  models.rs  parser.rs  watcher.rs
tests/: integration_test.rs
tests/fixtures/: test.sav
tests/python/: test_fs_sav.py
