[package]
name = "fs-sav"
version = "0.2.5"
edition = "2021"
authors = ["Jorge García <jgroca@gmail.com>"]
description = "Foxhole save file parser - extracts stockpile data from .sav files"
license-file = "LICENSE"
repository = "https://github.com/xurxogr/fs-sav"
keywords = ["foxhole", "save", "parser", "stockpile"]

[lib]
name = "fs_sav"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fs-sav"
path = "src/main.rs"

[dependencies]
# SAV parsing
uesave = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Python bindings (optional)
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
