[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "fs-sav"
dynamic = ["version"]
description = "Foxhole save file parser - extracts stockpile data from .sav files"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jorge García", email = "jgroca@gmail.com" }]
keywords = ["foxhole", "save", "parser", "stockpile", "game"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/xurxogr/fs-sav"
Repository = "https://github.com/xurxogr/fs-sav"
Issues = "https://github.com/xurxogr/fs-sav/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "fs_sav"

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "fs_sav.fs_sav"
ignore_missing_imports = true
